crates/loq_cli/tests/snapshots/snapshots__fix_guidance_shown_on_violation.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: stdout
---
✖      8 > 5      big.rs
1 violation

Try splitting into smaller files.
