crates/loq_cli/tests/snapshots/snapshots__json_output_all_ok.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: json
---
{
  "summary": {
    "files_checked": 2,
    "violations": 0
  },
  "version": "[version]",
  "violations": []
}
