crates/loq_cli/tests/snapshots/snapshots__json_output_empty_directory.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: json
---
{
  "summary": {
    "files_checked": 0,
    "violations": 0
  },
  "version": "[version]",
  "violations": []
}
