crates/loq_cli/tests/snapshots/snapshots__json_output_multiple_rules.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: json
---
{
  "summary": {
    "files_checked": 3,
    "violations": 1
  },
  "version": "[version]",
  "violations": [
    {
      "lines": 15,
      "max_lines": 10,
      "path": "toolong.rs",
      "rule": "*.rs"
    }
  ]
}
