crates/loq_cli/tests/snapshots/snapshots__json_output_pass_and_fail.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: json
---
{
  "summary": {
    "files_checked": 2,
    "violations": 1
  },
  "version": "[version]",
  "violations": [
    {
      "lines": 15,
      "max_lines": 10,
      "path": "error.rs",
      "rule": "default"
    }
  ]
}
