crates/loq_cli/tests/snapshots/snapshots__nested_directories.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: stdout
---
✖     15 > 10     src/deep/mod.rs
1 violation
