crates/loq_cli/tests/snapshots/snapshots__one_violation.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: stdout
---
✖     20 > 10     toolong.rs
1 violation
