crates/loq_cli/tests/snapshots/snapshots__pass_and_fail.snap
---
source: crates/loq_cli/tests/snapshots.rs
assertion_line: 94
expression: stdout
---
✖     15 > 10     error.rs
1 violation (TIME)
